redisbank-transactions/k8s/tr-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-tr-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-tr
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-tr
    spec:
      containers:
      - name: redisbank-tr
        image: < your image > 
        imagePullPolicy: Always
        ports:
        - name: redisbank-tr
          containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: redisbank-tr
  labels:
    app: redisbank-tr
spec:
  ports:
  - port: 8083
    name: redisbank-tr
    protocol: TCP
  selector:
    app: redisbank-tr
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redisbank-tr-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: redisbank
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: tr.<your prefix>.redisdemo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redisbank-tr
            port:
              number: 8083
